force-app/main/default/objects/Proposal__c/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <label>Service Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saver(k)</fullName>
            </value>
            <value>
                <fullName>Custom(k)</fullName>
            </value>
            <value>
                <fullName>Reserve(k)</fullName>
            </value>
            <value>
                <fullName>Simply Retirement</fullName>
            </value>
            <value>
                <fullName>RK Only</fullName>
            </value>
            <value>
                <fullName>Mega Roth Single(k)</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Single(k) Plus</fullName>
            </value>
            <value>
                <fullName>Single IRA</fullName>
            </value>
            <value>
                <fullName>Express IRA</fullName>
            </value>
            <value>
                <fullName>New Comp</fullName>
            </value>
            <value>
                <fullName>Fund Lineup Change</fullName>
            </value>
            <value>
                <fullName>Enhanced Payroll Service</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Adopting Member</fullName>
            </value>
            <value>
                <fullName>Plan Provision Changes</fullName>
            </value>
            <value>
                <fullName>CensiblyYours - Prior 3(38)</fullName>
            </value>
            <value>
                <fullName>CensiblyYours - No Prior 3(38)</fullName>
            </value>
            <value>
                <fullName>Edukate</fullName>
            </value>
            <value>
                <fullName>Simply Retirement TPA</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Bundled</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Unbundled</fullName>
            </value>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Custom(k) MML</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Single(k) Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>