force-app/main/default/objects/Proposal__c/fields/SRP_Education__c.field-meta.xml
<CustomField>
    <fullName>SRP_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sent from shift, indicates if a proposal from leafhouse/srp opted for education</description>
    <label>SRP Education</label>
    <type>Checkbox</type>
</CustomField>