force-app/main/default/objects/Proposal__c/fields/Stage_Flag__c.field-meta.xml
<CustomField>
    <fullName>Stage_Flag__c</fullName>
    <label>Stage Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Save</fullName>
            </value>
            <value>
                <fullName>Share</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Expired Save/Share</fullName>
            </value>
            <value>
                <fullName>Updates</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Quick Quote</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Advisor Info</fullName>
            </value>
            <value>
                <fullName>Advisor Review</fullName>
            </value>
            <value>
                <fullName>Advisor Save</fullName>
            </value>
            <value>
                <fullName>Advisor Share With SMB</fullName>
            </value>
            <value>
                <fullName>Advisor Share With TPA</fullName>
            </value>
            <value>
                <fullName>TPA Info</fullName>
            </value>
            <value>
                <fullName>TPA Review</fullName>
            </value>
            <value>
                <fullName>TPA Save</fullName>
            </value>
            <value>
                <fullName>TPA Share With SMB</fullName>
            </value>
            <value>
                <fullName>TPA Share With Advisor</fullName>
            </value>
            <value>
                <fullName>SMB Review</fullName>
            </value>
            <value>
                <fullName>SMB Save</fullName>
            </value>
            <value>
                <fullName>SMB Plan Purchase</fullName>
            </value>
            <value>
                <fullName>SMB Share With TPA</fullName>
            </value>
            <value>
                <fullName>SMB Share With Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>