force-app/main/default/objects/Proposal__c/fields/Time_to_Fund__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Fund__c</fullName>
    <description>Time to Fund from Implementation Object</description>
    <formula>Implementation__r.Time_to_Fund__c</formula>
    <inlineHelpText>Time to Fund from Implementation Object</inlineHelpText>
    <label>Time to Fund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>