force-app/main/default/objects/Proposal__c/fields/TPA_Annual_Per_Participant_Cost__c.field-meta.xml
<CustomField>
    <fullName>TPA_Annual_Per_Participant_Cost__c</fullName>
    <label>TPA Annual Per Participant Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>