force-app/main/default/objects/Proposal__c/fields/TPA_Contact__c.field-meta.xml
<CustomField>
    <fullName>TPA_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TPA Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TPA Proposals</relationshipLabel>
    <relationshipName>Proposals2</relationshipName>
    <type>Lookup</type>
</CustomField>