force-app/main/default/objects/Proposal__c/fields/TPA_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>TPA_Contact_Id__c</fullName>
    <formula>TPA_Contact__r.Contact_ID_18_Char__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TPA Contact Id</label>
    <type>Text</type>
</CustomField>