force-app/main/default/objects/Proposal__c/fields/TPA_EIN__c.field-meta.xml
<CustomField>
    <fullName>TPA_EIN__c</fullName>
    <label>TPA EIN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>