force-app/main/default/objects/Proposal__c/fields/TPA_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>TPA_Firm_Name__c</fullName>
    <label>TPA Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>