force-app/main/default/objects/Proposal__c/fields/TPA_Included__c.field-meta.xml
<CustomField>
    <fullName>TPA_Included__c</fullName>
    <label>TPA Included</label>
    <length>255</length>
    <type>Text</type>
</CustomField>