force-app/main/default/objects/Proposal__c/fields/TPA_Ops_Contact__c.field-meta.xml
<CustomField>
    <fullName>TPA_Ops_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TPA Ops Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proposals (TPA Ops Contact)</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>