force-app/main/default/objects/Proposal__c/fields/TPA_Ops_Email__c.field-meta.xml
<CustomField>
    <fullName>TPA_Ops_Email__c</fullName>
    <label>TPA Ops Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>