force-app/main/default/objects/Proposal__c/fields/TPA_Ops_First_Name__c.field-meta.xml
<CustomField>
    <fullName>TPA_Ops_First_Name__c</fullName>
    <label>TPA Ops First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>