force-app/main/default/objects/Proposal__c/fields/TPA_Sales_Email__c.field-meta.xml
<CustomField>
    <fullName>TPA_Sales_Email__c</fullName>
    <label>TPA Sales Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>