force-app/main/default/objects/Proposal__c/fields/TPA_Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>TPA_Setup_Fee__c</fullName>
    <label>TPA Setup Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>