force-app/main/default/objects/Proposal__c/fields/Type_of_Current_Legal_Proceedings__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Current_Legal_Proceedings__c</fullName>
    <description>Indicate which of the following and provide explanation</description>
    <inlineHelpText>Indicate which of the following and provide explanation</inlineHelpText>
    <label>Type of Current Legal Proceedings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IRS/DOL</fullName>
            </value>
            <value>
                <fullName>Proceeding</fullName>
            </value>
            <value>
                <fullName>Pending Litigation</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Proceeding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>