force-app/main/default/objects/Proposal__c/fields/X3_21__c.field-meta.xml
<CustomField>
    <fullName>X3_21__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3(21)</label>
    <type>Checkbox</type>
</CustomField>