force-app/main/default/objects/Proposal__c/fields/X3_38__c.field-meta.xml
<CustomField>
    <fullName>X3_38__c</fullName>
    <label>3(38)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>COTA Street</fullName>
            </value>
            <value>
                <fullName>Wilshire</fullName>
            </value>
            <value>
                <fullName>Kaye Capital</fullName>
            </value>
            <value>
                <fullName>Morningstar</fullName>
            </value>
            <value>
                <fullName>Envestnet</fullName>
            </value>
            <value>
                <fullName>NFP</fullName>
            </value>
            <value>
                <fullName>flexPATH</fullName>
            </value>
            <value>
                <fullName>GRP</fullName>
            </value>
            <value>
                <fullName>OneDigital</fullName>
            </value>
            <value>
                <fullName>MML</fullName>
            </value>
            <value>
                <fullName>SRP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>