force-app/main/default/objects/Proposal__c/fields/Yearly_Auto_Deferral_Percentage_Increase__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Auto_Deferral_Percentage_Increase__c</fullName>
    <label>Yearly Auto Deferral Percentage Increase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>