force-app/main/default/objects/Proposal__c/recordTypes/OPD.recordType-meta.xml
<RecordType>
    <fullName>OPD</fullName>
    <active>true</active>
    <description>Used for creating new OPD proposal records</description>
    <label>OPD</label>
</RecordType>