force-app/main/default/objects/Proposal__c/recordTypes/Sallus_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Sallus_Proposal</fullName>
    <active>true</active>
    <label>Sallus Proposal</label>
</RecordType>