force-app/main/default/objects/Proposal__c/recordTypes/Simply_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Simply_Proposal</fullName>
    <active>true</active>
    <label>Simply Proposal</label>
</RecordType>