force-app/main/default/objects/Proposal__c/validationRules/QACA_EACA_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>QACA_EACA_Match</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()
&amp;&amp;
NOT(ISBLANK(Opportunity__c))
&amp;&amp;
NOT(Opportunity__r.IsClosed)
&amp;&amp;
((CONTAINS(TEXT(Opportunity__r.AutoEnrollment__c),&quot;QACA&quot;)
&amp;&amp;
NOT(CONTAINS(TEXT(Opportunity__r.Safe_Harbor__c),&quot;QACA&quot;)))
||
(NOT(CONTAINS(TEXT(Opportunity__r.AutoEnrollment__c),&quot;QACA&quot;))
&amp;&amp;
CONTAINS(TEXT(Opportunity__r.Safe_Harbor__c),&quot;QACA&quot;)))</errorConditionFormula>
    <errorMessage>Ubiquity plans cannot mix EACA with QACA - verify Auto-Enrollment and Safe Harbor</errorMessage>
</ValidationRule>