force-app/main/default/objects/Proposal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Referrer_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Client_Company_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Stage_Flag__c</columns>
    <columns>Service_Option__c</columns>
    <columns>TPA_Account__c</columns>
    <columns>TPA_Contact__c</columns>
    <columns>TPA_Firm_Name__c</columns>
    <columns>Principal_Opportunity_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>