force-app/main/default/objects/Proposal__c/listViews/Partner_Proposal_Proposal.listView-meta.xml
<ListView>
    <fullName>Partner_Proposal_Proposal</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Proposal</label>
    <queue>Partner_Proposal</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>